<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:tools="http://schemas.android.com/tools"
                                            android:id="@+id/nestedScrollView"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:background="@drawable/background"
                                            android:paddingBottom="20dp"
                                            android:paddingLeft="20dp"
                                            android:paddingRight="20dp"
                                            android:paddingTop="20dp"
                                            tools:context=".RegisterActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:src="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/appCompatButtonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/colorTextHint"
                android:text="@string/text_register" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextViewLoginLink"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="Already a member? Login"
                android:textSize="16dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>

<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
              <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
              <!--xmlns:tools="http://schemas.android.com/tools"-->
              <!--android:layout_width="match_parent"-->
              <!--android:layout_height="wrap_content"-->
              <!--android:orientation="vertical"-->
              <!--android:gravity="center"-->
              <!--tools:context="com.example.stage.RegisterActivity">-->

    <!--<ImageView-->
        <!--android:layout_width="255dp"-->
        <!--android:layout_height="190dp"-->
        <!--android:id="@id/btn_logo_home"-->
        <!--app:srcCompat="@drawable/logo"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--tools:ignore="ContentDescription,MissingConstraints"-->
        <!--app:layout_constraintVertical_bias="0.0"/>-->

<!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="SQLite Tutorial - User Management"-->
        <!--android:textSize="20dp"-->
        <!--android:padding="10dp" />-->

<!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical">-->
    <!--<EditText-->
            <!--android:id="@+id/edittext_userid"-->
            <!--android:hint="User ID"-->
            <!--android:gravity="center"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->
    <!--<EditText-->
            <!--android:id="@+id/edittext_name"-->
            <!--android:hint="User Name"-->
            <!--android:gravity="center"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->
    <!--<EditText-->
            <!--android:id="@+id/edittext_age"-->
            <!--android:hint="User Age"-->
            <!--android:gravity="center"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->
<!--</LinearLayout>-->

<!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->
    <!--<Button-->
            <!--android:id="@+id/button_add_user"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:onClick="addUser"-->
            <!--android:text="Add" />-->

    <!--<Button-->
            <!--android:id="@+id/button_delete_user"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:onClick="deleteUser"-->
            <!--android:text="Delete" />-->

    <!--<Button-->
            <!--android:id="@+id/button_show_all"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:onClick="showAllUsers"-->
            <!--android:text="Show All" />-->
<!--</LinearLayout>-->
<!--<TextView-->
        <!--android:id="@+id/textview_result"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->
<!--<LinearLayout-->
        <!--android:id="@+id/ll_entries"-->
        <!--android:padding="15dp"-->
        <!--android:orientation="vertical"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"></LinearLayout>-->
<!--</LinearLayout>-->
